Development: Fix server IP

--- a/config/environments/development.conf
+++ b/config/environments/development.conf
@@ -6,7 +6,7 @@
 
   ServerAdmin webmaster@wordpress.local
 
-  ErrorLog  /var/www/adproof.local/error.log
-  CustomLog /var/www/adproof.local/access.log combined
+  ErrorLog  /var/www/wordpress.local/error.log
+  CustomLog /var/www/wordpress.local/access.log combined
 
 </VirtualHost>
