--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
     "wordpress-install-dir": "html/wp",
     "installer-paths": {
       "html/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "html/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
+      "html/app/plugins-mu/{$name}/": ["type:wordpress-muplugin"],
       "html/app/themes/{$name}/": ["type:wordpress-theme"]
     }
   }
