Reo: Ignore composer lock file
With instructions of how to commit it.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ error.log
 bin
 .vagrant
 vendor/*
+# Remove the following line if you require more control over dependency versions
+composer.lock
 
 ## NodeJS
 
