--- a/composer.json
+++ b/composer.json
@@ -20,29 +20,34 @@
     {
       "type": "composer",
       "url": "http://wpackagist.org"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/WebDevStudios/CMB2.git"
     }
   ],
   "require": {
     "php": ">=5.4",
-    "johnpbloch/wordpress": "4.4.x",
-    "vlucas/phpdotenv": "2.0.x",
+    "johnpbloch/wordpress": "4.5.x",
+    "vlucas/phpdotenv": "2.2.x",
     "composer/installers": "1.0.x",
-    "wpackagist-plugin/wordpress-seo": "3.0.x",
+    "wpackagist-plugin/wordpress-seo": "3.1.x",
     "wpackagist-plugin/wp-google-analytics": "1.4.x",
     "wpackagist-plugin/google-sitemap-generator": "4.0.x",
-    "wpackagist-plugin/wp-robots-txt": "1.1",
-    "wpackagist-plugin/wp-security-audit-log": "2.2.x",
+    "wpackagist-plugin/wp-robots-txt": "1.1.x",
+    "wpackagist-plugin/wp-security-audit-log": "2.4.x",
     "wpackagist-plugin/brute-force-login-protection": "1.5.x",
-    "wpackagist-plugin/sf-move-login": "2.2.x",
     "wpackagist-plugin/safe-redirect-manager": "1.7.x",
     "wpackagist-plugin/post-type-archive-links": "1.3.x",
     "wpackagist-plugin/admin-menu-manager": "1.0.x",
-    "wpackagist-plugin/members": "1.1.x",
-    "wpackagist-plugin/advanced-custom-fields": "4.4.x",
-    "wpackagist-plugin/custom-contact-forms": "7.0.x"
+    "wpackagist-plugin/custom-contact-forms": "7.8.x",
+		"wpackagist-plugin/wp-mail-smtp": "0.9.x",
+		"wpackagist-plugin/w3-total-cache": "0.9.x",
+		"wpackagist-plugin/backwpup": "3.3.x",
+		"webdevstudios/cmb2": "2.2.x"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "~2.4",
+    "squizlabs/php_codesniffer": "*",
     "wp-coding-standards/wpcs": "*",
     "wpackagist-theme/twentysixteen": "*",
     "wpackagist-plugin/wordpress-importer": "*",
@@ -59,10 +64,17 @@
   },
   "extra": {
     "wordpress-install-dir": "html/wp",
-    "installer-paths": {
-      "html/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "html/app/plugins-mu/{$name}/": ["type:wordpress-muplugin"],
-      "html/app/themes/{$name}/": ["type:wordpress-theme"]
+		"installer-paths": {
+      "html/app/plugins-mu/{$name}/": [
+        "type:wordpress-muplugin",
+        "webdevstudios/cmb2"
+      ],
+      "html/app/plugins/{$name}/": [
+				"type:wordpress-plugin"
+			],
+      "html/app/themes/{$name}/": [
+				"type:wordpress-theme"
+			]
     }
   }
 }
