Config: Update sample env to but useable straight away

--- a/sample.env
+++ b/sample.env
@@ -1,13 +1,13 @@
 WP_ENV=development
-WP_HOME=http://www.example.dev
-WP_SITEURL=http://www.example.dev/wp
+WP_HOME=http://www.wordpress.local
+WP_SITEURL=http://www.wordpress.local/wp
 
-WP_THEME="twentyfifteen"
+WP_THEME="twentysixteen"
 WP_DEBUG="1"
-WPLANG=""
+WPLANG="en_GB"
 WP_ALLOW_MULTISITE=false
 
-DOMAIN_CURRENT_SITE="www.example.dev"
+DOMAIN_CURRENT_SITE="www.wordpress.local"
 
 DB_NAME=wordpress
 DB_USER=root
